--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,13 @@
 'h h'
 'n c';
 
-    grid-template-rows: 60px 1fr;
+    grid-template-rows: 80px 1fr;
     grid-template-columns: 2fr 10fr;
-    grid-gap: 10px;
+    grid-gap: 0px;
 }
 
 .app-wrapper-content {
     grid-area: c;
-    background-color: yellow;
+    background-color: #EDE7D9;
 }
 
