--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,8 @@
 .header {
     grid-area: h;
-    background-color: wheat;
-    }
-    .header img {
-        width: 50px;
-    }
+    background-color: #4B4237;
+}
+
+.header img {
+    height: 70px;
+}
