--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,6 +2,7 @@
     grid-area: n;
     background-color: #FF7477;
     padding: 20px;
+    width: 180px;
 }
 
 a {
@@ -14,4 +15,23 @@ a {
 
 .active {
     color: #66C3FF;
+}
+
+
+.friends {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.innerFriends {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.friendsImg {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
